--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:watch": "npm run test -- --watchAll -i",
     "test:e2e": "npm run start -- start:e2e",
     "start:e2e": "cypress open",
+    "test:e2e:ci": "npm run start -- -r start:e2e:ci",
+    "start:e2e:ci": "cypress run",
     "clean": "rimraf dist",
     "prettier": "prettier {config,src}/**/*{.js,.jsx,.ts,.tsx}",
     "prettier:fix": "npm run prettier -- --fix",
